--- a/clientsdk/src/main/AndroidManifest.xml
+++ b/clientsdk/src/main/AndroidManifest.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <queries>
+        <package android:name="com.example.connector.server">
+        </package>
+        <intent>
+            <action android:name="jm.droid.service.action.music"/>
+        </intent>
+    </queries>
+    <application>
+
+    </application>
 </manifest>
