--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,34 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Disable welcome message.
+systemProp.org.gradle.internal.launcher.welcomeMessageEnabled=false
+
+# Config
+minSdk=21
+targetSdk=33
+compileSdk=33
+
+# Maven
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+
+POM_GROUP_ID=io.github.jiangjm424
+POM_VERSION=1.0.3-SNAPSHOT
+
+POM_DESCRIPTION=An easy way to bind service with aidl.
+POM_INCEPTION_YEAR=2023
+
+POM_URL=https://github.com/jiangjm424/Connector
+POM_SCM_URL=https://github.com/jiangjm424/Connector
+POM_SCM_CONNECTION=scm:git:git://github.com/jiangjm424/Connector.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/jiangjm424/Connector.git
+
+POM_LICENCE_NAME=The Apache License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=jiangjm424
+POM_DEVELOPER_NAME=jiang.junmin
+POM_DEVELOPER_URL=https://github.com/jiangjm424/
